estudo de bindings

--- a/src/app/data-biding/data-biding.component.html
+++ b/src/app/data-biding/data-biding.component.html
@@ -5,6 +5,33 @@
 <p>Quanto eh {{idade}} + 1?</p>
 <p>{{idade + 1}}</p>
 
+<br>
+<br>
+
+<hr>
 <h2>Property Binding</h2>
 <button [disabled]="checkedDisabled">Button</button>
 <img [src]="imgSrc" alt="" [title]="imgTitle">
+
+<br>
+<br>
+
+<hr>
+
+<h2>Event Biding</h2>
+<button (click)="alertaInfo($event)">Evento</button>
+
+<div (mousemove)="meuMouseMove($event)" style="background: red; width: 300px; height: 300px"></div>
+{{position.x}} - {{position.y}}
+<br>
+<br>
+
+<hr>
+
+<h2>Event Biding</h2>
+<input [(ngModel)]="nome">
+{{nome}}
+<br>
+<br>
+
+<hr>
